--- a/jenkin/Dockerfile
+++ b/jenkin/Dockerfile
@@ -17,3 +17,4 @@ COPY jenkins-home/userContent $JENKINS_REF/userContent
 COPY jenkins-home/jobs $JENKINS_REF/jobs/
 COPY jenkins-home/init.groovy.d $JENKINS_REF/init.groovy.d/
 COPY jenkins-home/dsl $JENKINS_REF/dsl/
+RUN apk add docker
