--- a/synectiks-website/Dockerfile
+++ b/synectiks-website/Dockerfile
@@ -41,7 +41,7 @@ RUN cp /usr/share/zoneinfo/${TIMEZONE} /etc/localtime && \
     echo "${TIMEZONE}" > /etc/timezone && \
     mkdir -p /run/apache2 && chown -R apache:apache /run/apache2 && chown -R apache:apache /var/www/localhost/htdocs/ && \
     sed -i 's#\#LoadModule rewrite_module modules\/mod_rewrite.so#LoadModule rewrite_module modules\/mod_rewrite.so#' /etc/apache2/httpd.conf && \
-    sed -i 's#ServerName www.active.synectiks.com:80#\nServerName localhost:80#' /etc/apache2/httpd.conf && 
+    sed -i 's#ServerName www.active.synectiks.com:80#\nServerName localhost:80#' /etc/apache2/httpd.conf  
 
 RUN sed -i 's#display_errors = Off#display_errors = On#' /etc/php7/php.ini && \
     sed -i 's#error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT#error_reporting = E_ALL#' /etc/php7/php.ini
