changes to docker build for jira

--- a/jira/Dockerfile
+++ b/jira/Dockerfile
@@ -16,6 +16,7 @@ RUN wget -O - \
 WORKDIR /opt/jira
 VOLUME ["/opt/jira-home"]
 EXPOSE 8080
+ADD server.xml /opt/jira/conf/server.xml
 ADD setup-jira-db.sh /opt/jira/setup-jira-db.sh
 RUN chmod u+x /opt/jira/setup-jira-db.sh
 ENV JVM_SUPPORT_RECOMMENDED_ARGS -Datlassian.plugins.enable.wait=300
