some fixes in docker buildfile

--- a/nexus/Dockerfile
+++ b/nexus/Dockerfile
@@ -12,7 +12,7 @@ ARG SONATYPE_HOME=/opt/sonatype
 ARG NEXUS_USER=nexus
 ARG NEXUS_USER_GID=5205
 ARG NEXUS_VERSION=3.5.2-01
-ARG NEXUS_HOME=${SONATYPE_HOME}/nexus-home
+ARG NEXUS_HOME=${SONATYPE_HOME}/nexus-${NEXUS_VERSION}
 ARG NEXUS_DOWNLOAD_URL=https://sonatype-download.global.ssl.fastly.net/nexus/3/nexus-${NEXUS_VERSION}-unix.tar.gz
 
 ENV SONATYPE_HOME=${SONATYPE_HOME} \
