--- a/synectiks-website/Dockerfile
+++ b/synectiks-website/Dockerfile
@@ -1,10 +1,5 @@
 FROM alpine:3.6
 ENV TIMEZONE America/Santiago
-MAINTAINER papu bhattacharya <papu.bhattacharya@synectiks.com>
-LABEL Description="LAMP stack for synectiks website, based on Ubuntu 16.04 LTS. Includes .htaccess support and popular PHP7 features, including composer and mail() function." \
-	License="Apache License 2.0" \
-	Usage="docker run -d -p [HOST WWW PORT NUMBER]:80 -p [HOST DB PORT NUMBER]:3306 -v [HOST WWW DOCUMENT ROOT]:/var/www/html -v [HOST DB DOCUMENT ROOT]:/var/lib/mysql fauria/lamp" \
-	Version="1.0"
 RUN apk update && apk upgrade
 RUN apk add mariadb mariadb-client \
     apache2 \ 
@@ -40,8 +35,7 @@ RUN curl -sS https://getcomposer.org/installer | \
 RUN cp /usr/share/zoneinfo/${TIMEZONE} /etc/localtime && \
     echo "${TIMEZONE}" > /etc/timezone && \
     mkdir -p /run/apache2 && chown -R apache:apache /run/apache2 && chown -R apache:apache /var/www/localhost/htdocs/ && \
-    sed -i 's#\#LoadModule rewrite_module modules\/mod_rewrite.so#LoadModule rewrite_module modules\/mod_rewrite.so#' /etc/apache2/httpd.conf && \
-    sed -i 's#ServerName www.active.synectiks.com:80#\nServerName localhost:80#' /etc/apache2/httpd.conf  
+    sed -i 's#\#LoadModule rewrite_module modules\/mod_rewrite.so#LoadModule rewrite_module modules\/mod_rewrite.so#' /etc/apache2/httpd.conf 
 
 RUN sed -i 's#display_errors = Off#display_errors = On#' /etc/php7/php.ini && \
     sed -i 's#error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT#error_reporting = E_ALL#' /etc/php7/php.ini
