added sonar redirection

--- a/nginx-proxy/nginx.vh.default.conf
+++ b/nginx-proxy/nginx.vh.default.conf
@@ -1,6 +1,6 @@
 server {
     listen       80;
-    server_name  servicedesk.synectiks.com www.servicedesk.synectiks.com;
+    server_name  servicedesk.synectiks.com www.servicedesk.synectiks.com sonar.synectiks.com www.sonar.synectiks.com;
 
     if ($http_x_forwarded_proto != 'https') {
        return 301 https://$host$request_uri;    
