changes in permission

--- a/xformation/Dockerfile
+++ b/xformation/Dockerfile
@@ -34,6 +34,8 @@ EXPOSE 3000
 COPY ./setup-xformation-db.sh /setup-xformation-db.sh
 COPY ./run.sh /run.sh
 COPY ./launch.sh /launch.sh
+RUN chmod u+x /setup-xformation-db.sh
+RUN chmod u+x /run.sh
 RUN chmod u+x /launch.sh
 USER xformation
 WORKDIR /
