--- a/xformation/Dockerfile
+++ b/xformation/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:stretch-slim
+FROM debian:stretch
 
 ARG XFORMATION_URL="https://s3.amazonaws.com/xformation-releases/xformation-latest.linux-x64.tar.gz"
 ARG XF_UID="472"
@@ -11,7 +11,7 @@ ENV PATH=/usr/share/xformation/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr
     XF_PATHS_LOGS="/var/log/xformation" \
     XF_PATHS_PLUGINS="/var/lib/xformation/plugins" \
     XF_PATHS_PROVISIONING="/etc/xformation/provisioning"
-RUN apt-get update && apt-get install -y postgresql postgresql-contrib
+RUN apt-get update && apt-get install -y postgresql-client 
 RUN apt-get update && apt-get install -qq -y tar libfontconfig curl ca-certificates && \
     mkdir -p "$XF_PATHS_HOME/.aws" && \
     curl "$XFORMATION_URL" | tar xfvz - --strip-components=1 -C "$XF_PATHS_HOME" && \
