--- a/sinopia/Dockerfile
+++ b/sinopia/Dockerfile
@@ -8,8 +8,8 @@ RUN npm install js-yaml sinopia
 RUN chown -R sinopia:sinopia /opt/sinopia
 USER sinopia
 ADD /config.yaml /tmp/config.yaml
-ADD /start.sh /opt/sinopia/start.sh
-#RUN chmod +x /opt/sinopia/start.sh
-CMD ["chmod +x /opt/sinopia/start.sh","/opt/sinopia/start.sh"]
+COPY start.sh /opt/sinopia/start.sh
+RUN chmod +x /opt/sinopia/start.sh
+CMD [/opt/sinopia/start.sh"]
 EXPOSE 4873
 VOLUME /opt/sinopia
