--- a/sdp/Dockerfile
+++ b/sdp/Dockerfile
@@ -11,8 +11,7 @@ ENV PATH=/usr/share/sdp/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/s
     SDP_PATHS_LOGS="/var/log/sdp" \
     SDP_PATHS_PLUGINS="/var/lib/sdp/plugins" \
     SDP_PATHS_PROVISIONING="/etc/sdp/provisioning"
-RUN apt-get update && apt-get install -y postgresql-client npm
-RUN npm install -g json-server
+RUN apt-get update && apt-get install -y postgresql-client 
 RUN apt-get update && apt-get install -qq -y tar libfontconfig curl ca-certificates && \
     mkdir -p "$SDP_PATHS_HOME/.aws" && \
     curl "$SDP_URL" | tar SDPvz - --strip-components=1 -C "$SDP_PATHS_HOME" && \
@@ -33,11 +32,9 @@ RUN apt-get update && apt-get install -qq -y tar libfontconfig curl ca-certifica
 EXPOSE 3000
 
 COPY ./setup-sdp-db.sh /setup-sdp-db.sh
-COPY ./start-simulator.sh /start-simulator.sh
 COPY ./run.sh /run.sh
 COPY ./launch.sh /launch.sh
 RUN chmod 777 /setup-sdp-db.sh
-RUN chmod 777 /start-simulator.sh
 RUN chmod 777 /run.sh
 RUN chmod 777 /launch.sh
 USER sdp
