removing load-demo part

--- a/erp/Dockerfile
+++ b/erp/Dockerfile
@@ -17,7 +17,7 @@ RUN set -x \
 	&& wget -O erp.tar.gz "$ERP_TGZ_URL" \
 	&& tar -xvf erp.tar.gz --strip-components=1 \
 	&& rm erp.tar.gz* \
-	&& sh ant load-demo
+	&& sh ant build
 ADD setup-erp-db.sh /opt/erp/setup-erp-db.sh
 RUN chmod u+x /opt/erp/setup-erp-db.sh
 ADD launch.sh /launch
