--- a/eskaysoftui/Makefile
+++ b/eskaysoftui/Makefile
@@ -8,26 +8,36 @@ all: run
 # or to publish the :latest version to the specified registry as :1.0.0, run:
 # $ make publish version=1.0.0
 
-# name = examples/synectiks-website
+# name = examples/crossoverservice
 # registry = 657907747545.dkr.ecr.us-east-1.amazonaws.com
 # version ?= latest
 
+binary:
+	$(call blue, "Building Java Jar binary ready for containerisation...")
+	echo "${mvnHome}"
+	${mvnHome}/bin/mvn clean install -DskipTests=true
+
+test:
+	$(call blue, "Building Java Jar binary ready for containerisation...")
+	echo "${mvnHome}"
+	${mvnHome}/bin/mvn surefire-report:report
+
 image: 
 	$(call blue, "Building docker image...")
-	docker build --no-cache -t ${IMAGE_NAME}:${VERSION} .
+	docker build -t ${IMAGE_NAME}:${VERSION} .
 	$(MAKE) clean
 
 run: image
 	$(call blue, "Running Docker image locally...")
-	docker run -i -t --rm -p 8080:8080 ${IMAGE_NAME}:${VERSION} 
+	docker run -i -t --rm -p 8001:8001 ${IMAGE_NAME}:${VERSION}
 
-publish:  
+publish:
 	$(call blue, "Publishing Docker image to registry...")
 	docker tag ${IMAGE_NAME}:latest ${REGISTRY}/${IMAGE_NAME}:${VERSION}
 	docker push ${REGISTRY}/${IMAGE_NAME}:${VERSION}
 
-clean: 
-	@rm -f app 
+clean:
+	@rm -f app
 
 define blue
 	@echo $1
