Some fixes in Dockerfile

--- a/eskaysoftui/Dockerfile
+++ b/eskaysoftui/Dockerfile
@@ -6,7 +6,7 @@ RUN npm i && mkdir /ng-app && cp -R ./node_modules ./ng-app
 WORKDIR /ng-app
 COPY . .
 ## Build the angular app in production mode and store the artifacts in dist folder
-RUN $(npm bin)/ng build --prod
+RUN $(npm bin)/ng build
 FROM nginx:1.13.3-alpine
 ## Copy our default nginx config
 COPY nginx/default.conf /etc/nginx/conf.d/
