added s3 upload command

--- a/eskaysoftui/Makefile
+++ b/eskaysoftui/Makefile
@@ -11,6 +11,19 @@ all: run
 # name = examples/crossoverservice
 # registry = 657907747545.dkr.ecr.us-east-1.amazonaws.com
 # version ?= latest
+
+binary:
+	$(call blue, "Building Angular build ready for containerisation...")
+	$(npm bin)/ng build 
+
+uploadins3:
+	$(call blue, "Building Angular build tar ready for uploading in aws...")
+	cd dist && tar -czvf eskaysoft-latest.tar.gz eskaysoft &&  aws s3  cp eskaysoft-latest.tar.gz s3://eskaysoft-releases/
+
+test:
+	$(call blue, "Testing angular 6 app")
+	echo "${mvnHome}"
+
 image: 
 	$(call blue, "Building docker image...")
 	docker build -t ${IMAGE_NAME}:${VERSION} .
@@ -24,6 +37,9 @@ publish:
 	$(call blue, "Publishing Docker image to registry...")
 	docker tag ${IMAGE_NAME}:latest ${REGISTRY}/${IMAGE_NAME}:${VERSION}
 	docker push ${REGISTRY}/${IMAGE_NAME}:${VERSION}
+
+clean:
+	@rm -f app
 
 define blue
 	@echo $1
