changes for local confluence users

--- a/confluence/Dockerfile
+++ b/confluence/Dockerfile
@@ -20,8 +20,8 @@ ADD jars/atlassian-universal-plugin-manager-plugin-2.18.4.jar atlassian-universa
 RUN cp -v atlassian-universal-plugin-manager-plugin-2.18.4.jar /opt/confluence/confluence/WEB-INF/atlassian-bundled-plugins/ && \
     cp -v atlassian-extras-decoder-v2-3.2.jar /opt/confluence/confluence/WEB-INF/lib/
 ADD postgresql-42.2.2.jar /opt/confluence/lib/postgresql-42.2.2.jar
-ADD setup-confluence-db.sh /opt/confluence/setup-confluence-db.sh
-RUN chmod u+x /opt/confluence/setup-confluence-db.sh
+ADD setup-confluence-db.sh /setup-confluence-db.sh
+RUN chmod u+x /setup-confluence-db.sh
 ADD launch.sh /launch
 RUN chmod u+x /launch
 ADD data.sql /data.sql
